Trying to fix zoom issue on mobile

--- a/app/src/pages/Home/Home.css
+++ b/app/src/pages/Home/Home.css
@@ -22,7 +22,7 @@
 
 @media (max-width: 600px) {
     .HomeLogo {
-        width: 225px;
+        width: 250px;
     }
 
     .big {
