--- a/app/src/pages/Home/SearchBarHome/SearchBarHome.css
+++ b/app/src/pages/Home/SearchBarHome/SearchBarHome.css
@@ -104,7 +104,7 @@
 
   .search-input-home {
     padding: 10px;
-    font-size: 12px;
+    font-size: 16px;
     border-radius: 20px;    
   }
 
